# SQL-MiddleMan

./: .gitignore  README.md  conftest.py  manage.py  pyproject.toml  pytest.ini
Analytics/: urls.py
Analytics/api/: sample_result_api.py
Analytics/migrations/: 0001_initial.py
Analytics/models/: __init__.py  sample_result.py
Analytics/serializers/: sample_result_serializer.py
Analytics/services/: sample_result_service.py
Ingestion/: apps.py  urls.py
Ingestion/api/: sample_data_api.py
Ingestion/migrations/: 0001_initial.py
Ingestion/models/: sample_data.py
Ingestion/serializers/: sample_data_serializer.py
Ingestion/services/: sample_data_service.py
SQLMiddleMan/: asgi.py  authentication.py  settings.py  urls.py  wsgi.py
tests/: test_analytics.py  test_auth.py  test_ingestion.py
tools/management/commands/: create_table.py
